# Midlegram

./: GEMINI.md
.github/workflows/: docs.yml  release_pkg.yml
mg-client/: .gitignore  Application Descriptor  MANIFEST.MF  justfile  mbt-project.toml
mg-client/src/midp/tapeline/midlegram/: ArrayUtils.java  G.java  Midlegram.java  Services.java  Settings.java  StringUtils.java
mg-docs/: mkdocs.yml  pyproject.toml
mg-docs/docs/: index.md
mg-docs/docs/internals/mdb/: file.md  fixed.md  message.md  overview.md  variable.md
mg-server/: .coveragerc  .dockerignore  .flake8  .importlinter  Dockerfile  app.py  compose.yml  justfile  mypy.ini  nginx.conf  pyproject.toml  pytest.ini  ruff.toml
mg-server/midlegram/: common.py  config.py
mg-server/midlegram/application/: client.py  exceptions.py  feat_connect.py  feat_get_media.py  feat_list_chat.py  feat_login.py  feat_poll_events.py  feat_read_messages.py  feat_send.py  pagination.py  session.py
mg-server/midlegram/bootstrap/: app.py  config.py  logging.py
mg-server/midlegram/bootstrap/di/: config.py  converters.py  tg.py
mg-server/midlegram/domain/: entities.py  text_adapter.py
mg-server/midlegram/infrastructure/: client_store.py  converters.py  tg_client.py
mg-server/midlegram/presentation/http/: controllers.py  errors.py  security.py  serializers.py
mg-server/midlegram/presentation/http/framework/: errors.py
shared/mgproto/: protocol.txt
shared/mgproto/impl/java/: Deserializer.java
shared/mgproto/impl/py/: serializers.py
shared/mgproto/langdef/: compiling.yml  grammar.yml  linking.yml
(+110 files in other folders)
