[project]
name = "mg-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dishka>=1.7.2",
    "fuente",
    "inflection>=0.5.1",
    "litestar[prometheus,standard]>=2.19.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-telegram>=0.19.0",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
fuente = { git = "https://github.com/Tishka17/fuente.git" }
